--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://rajkumarverapatnam.github.io/LearnerMaster",
   "name": "learners",
   "version": "0.1.0",
   "private": true,
@@ -8,6 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "apexcharts": "^3.20.0",
     "bootstrap": "^3.4.1",
+    "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-apexcharts": "^1.3.7",
     "react-calendar-heatmap": "^1.8.1",
