--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://rajkumarverapatnam.github.io/LearnerMaster",
+  "homepage": "https://rajkumarverapatnam.github.io",
   "name": "learners",
   "version": "0.1.0",
   "private": true,
